[metadata]
description-file=README.md
license_files=LICENSE
author = Jérémie Rodez
author_email = jeremierodez@outlook.com
description = A nice-looking, minimalist and easy-to-use Python library for logging your Python programs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JRodez/ezpylog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Topic :: Software Development
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options.packages.find]
where = src